--- a/main.html
+++ b/main.html
@@ -14,14 +14,13 @@
 		</tr></thead>
 		<tbody>
 			<tr>
-				<td>1</td>
-				<td>j</td>
+				<td></td>
+				<td></td>
 			</tr>
 		</tbody>
 	</table>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <script type="text/javascript" src="./script.js"></script>
 
 </body>
 
