--- a/main.html
+++ b/main.html
@@ -14,8 +14,12 @@
 		</tr></thead>
 		<tbody>
 			<tr>
-				<td></td>
-				<td></td>
+				<td>12</td>
+				<td>aman</td>
+			</tr>
+			<tr>
+				<td>15</td>
+				<td>pritam</td>
 			</tr>
 		</tbody>
 	</table>
